--- a/style.css
+++ b/style.css
@@ -5,5 +5,21 @@
 }
 
 body {
+    background-color: #222;
+    color: white;
     font-family: sans-serif;
+}
+
+#griglia {
+    margin: 0 auto;
+    width: 1000px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.quadrato {
+    width: 100px;
+    height: 100px;
+    border: 1px solid blue;
+
 }
