--- a/style.css
+++ b/style.css
@@ -21,5 +21,10 @@ body {
     width: 100px;
     height: 100px;
     border: 1px solid blue;
+    text-align: center;
+    line-height: 100px;
+}
 
+.bck-blu {
+    background-color: blue;
 }
