--- a/style.css
+++ b/style.css
@@ -10,6 +10,14 @@ body {
     font-family: sans-serif;
 }
 
+button {
+    padding: 1rem;
+}
+
+.d-none {
+    display: none;
+}
+
 #griglia {
     margin: 0 auto;
     width: 1000px;
