--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ button {
 
 #griglia {
     margin: 0 auto;
-    width: 1000px;
     display: flex;
     flex-wrap: wrap;
 }
@@ -35,4 +34,16 @@ button {
 
 .bck-blu {
     background-color: blue;
+}
+
+.grid-facile {
+    width: 1000px;
+}
+
+.grid-medio {
+    width: 900px;
+}
+
+.grid-difficile {
+    width: 700px;
 }
